# backend/app/api/routes.py
@@ -1,6 +1,7 @@
-from ..api import agent
+from ..api import agent, idea
 from fastapi import APIRouter
 
 router = APIRouter()
 
 router.include_router(agent.router, prefix="/agent", tags=["Chat"])
+router.include_router(idea.router, prefix="/idea", tags=["Ideas"])
